--- a/apoint/doctors/templates/doctor_list.html
+++ b/apoint/doctors/templates/doctor_list.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Список врачей</title>
+    <link rel="stylesheet" href="{% static 'doctors/css/list.css' %}">
 </head>
 <body>
     <h1>Список врачей</h1>
