--- a/apoint/doctors/templates/spec_list.html
+++ b/apoint/doctors/templates/spec_list.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Список врачей</title>
+    <link rel="stylesheet" href="{% static 'doctors/css/list.css' %}">
 </head>
 <body>
     <h1>Список Направлений</h1>
