--- a/apoint/doctors/static/doctors/css/index.css
+++ b/apoint/doctors/static/doctors/css/index.css
@@ -59,22 +59,35 @@ ul {
     list-style-type: none;
     padding-left: 0;
 }
-.shedule-item {
-    width: 40%;
-    border: 1px solid #CCC;
-    padding: 20px;
-    margin: 10px auto;
-    border-radius: 5px;
-}
-.shedule-item .date, 
-.shedule-item .start_time,
-.shedule-item .end_time, 
-.shedule-item  .available_slots{
-    color: #333;
-    font-family: 'Arial', sans-serif;
-    font-size: 18px;
+.appointment-title, .schedule-title {
+    font-family: 'Roboto', sans-serif; 
+    color: #333; 
 }
 
-.shedule-item .available_slots{
-    color: rgb(43, 255, 0);
+.appointment-title {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+
+.schedule-title {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+
+.schedule-list {
+    width: 40%;
+    margin: 0 auto;
+    list-style: none;
+    padding-left: 0;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.schedule-item {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    color: #000000;
+    background-color: #ffffff;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-radius: 10px;
 }
