--- a/apoint/doctors/static/doctors/css/list.css
+++ b/apoint/doctors/static/doctors/css/list.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f6f6f6;
@@ -20,7 +19,6 @@ ul {
 }
 
 ul li {
-    background-color: #fff;
     padding: 15px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
     margin-bottom: 10px;
@@ -34,7 +32,6 @@ ul li:hover {
 
 ul li a {
     text-decoration: none;
-    color: #333;
     font-size: 1.2em;
 }
 
@@ -42,3 +39,10 @@ ul li a:hover {
     color: #007bff;
 }
 
+a.no-doctors {
+    color: red;
+}
+
+a.has-doctors {
+    color: green;
+}
