--- a/apoint/doctors/templates/doctor_list.html
+++ b/apoint/doctors/templates/doctor_list.html
@@ -4,6 +4,57 @@
 <head>
     <title>Список врачей</title>
     <link rel="stylesheet" href="{% static 'doctors/css/list.css' %}">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f6f6f6;
+        }
+        
+        h1 {
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #333;
+        }
+        
+        ul {
+            width: 40%;
+            margin: auto;
+            list-style: none;
+            padding-left: 0px;
+            text-align: center;
+        }
+        
+        ul li {
+            padding: 15px;
+            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+            margin-bottom: 10px;
+            border-radius: 5px;
+            transition: box-shadow .3s;
+        }
+        
+        ul li:hover {
+            box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.1);
+        }
+        
+        ul li a {
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        
+        ul li a:hover {
+            color: #007bff;
+        }
+        
+        a.no-doctors {
+            color: red;
+        }
+        
+        a.has-doctors {
+            color: green;
+        }
+        
+    </style>
 </head>
 <body>
     <h1>Список врачей</h1>
