--- a/apoint/doctors/templates/spec_list.html
+++ b/apoint/doctors/templates/spec_list.html
@@ -4,11 +4,61 @@
 <head>
     <title>Список врачей</title>
     <link rel="stylesheet" href="{% static 'doctors/css/list.css' %}">
+    
     <style>
-        .no-doctors {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f6f6f6;
+        }
+        
+        h1 {
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #333;
+        }
+        
+        ul {
+            width: 40%;
+            margin: auto;
+            list-style: none;
+            padding-left: 0px;
+            text-align: center;
+        }
+        
+        ul li {
+            padding: 15px;
+            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+            margin-bottom: 10px;
+            border-radius: 5px;
+            transition: box-shadow .3s;
+        }
+        
+        ul li:hover {
+            box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.1);
+        }
+        
+        ul li a {
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        
+        ul li a:hover {
+            color: #007bff;
+        }
+        
+        a.no-doctors {
             color: red;
         }
         
+        a.has-doctors {
+            color: green;
+        }
+        
+        .no-doctors {
+            color: red;
+        }
+
         .has-doctors {
             color: green;
         }
@@ -18,8 +68,8 @@
     <h1>Список Направлений</h1>
     <ul>
         {% for specialization in specializations %}
-        <li> 
-          <a class="{% if specialization.num_doctors == 0 %}no-doctors{% else %}has-doctors{% endif %}" 
+        <li>
+          <a class="{% if specialization.num_doctors == 0 %}no-doctors{% else %}has-doctors{% endif %}"
             href="{% url 'spec-name' specialization.name %}">{{ specialization }} ({{ specialization.num_doctors }} врач(ей))
           </a>
         </li>
